# Vita3K-Android

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.gradle  building.md
.github/workflows/: android.yml  c-cpp.yml  codeql-analysis.yml
android/: build.gradle
android/src/main/: AndroidManifest.xml
lang/system/: da.xml  de.xml  en.xml  es.xml  fi.xml  fr.xml  it.xml  ja.xml  ko.xml  nl.xml  no.xml  pl.xml  pt-br.xml  pt.xml  ru.xml  sv.xml  tr.xml  zh-s.xml  zh-t.xml
lang/user/: id.xml  ms.xml
licenses/: libatrac9.txt  libfat16.txt  vita-toolchain.txt
vita3k/: CMakeLists.txt  interface.cpp  main.cpp  resource.h
vita3k/app/: CMakeLists.txt
vita3k/app/src/: app.cpp  app_init.cpp
vita3k/audio/: CMakeLists.txt
vita3k/audio/src/: audio.cpp
vita3k/audio/src/impl/: cubeb_audio.cpp
vita3k/compat/src/: compat.cpp
vita3k/config/: CMakeLists.txt
vita3k/cpu/: CMakeLists.txt
vita3k/cpu/include/cpu/: common.h
vita3k/cpu/include/cpu/impl/: dynarmic_cpu.h
vita3k/cpu/src/: cpu.cpp  dynarmic_cpu.cpp
vita3k/ctrl/: CMakeLists.txt
vita3k/ctrl/src/: ctrl.cpp
vita3k/glutil/src/: shader.cpp
vita3k/gui/: CMakeLists.txt
vita3k/gui/src/: about_dialog.cpp  app_context_menu.cpp  archive_install_dialog.cpp  common_dialog.cpp  compile_shaders.cpp  content_manager.cpp  controllers_dialog.cpp  controls_dialog.cpp  firmware_install_dialog.cpp  gui.cpp  home_screen.cpp  imgui_impl_sdl.cpp  (+14 more)
vita3k/module/: CMakeLists.txt
vita3k/renderer/: CMakeLists.txt
vita3k/shader/: CMakeLists.txt
vita3k/touch/: CMakeLists.txt
vita3k/util/: CMakeLists.txt
(+102 files in other folders)
